# MECH-M-DUAL-2-MLB-DATA-main

./: .gitignore  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
src/MECH-M-DUAL-2-MLB-DATA/: clean_repo.py  data.py  inference.py  model.py  myio.py  run_etl.py  train.py
src/MECH-M-DUAL-2-MLB-DATA/etl/: __init__.py  extract.py  load.py  transform.py
